Add basic div hierarchy to index.html
Added six main divisions and most of their sub-divs. No content has
been added to these divs yet.

--- a/index.html
+++ b/index.html
@@ -8,27 +8,62 @@
 
     <body>
         <div class="header">
+            <div class="header-right">
 
+            </div>
+            <div class="header-left">
+
+            </div>
         </div>
-
+<!-------------------------------------------->
         <div class="greeter">
+            <div class="greeter-card">
 
+            </div>
+            <img class="greeter-img>">
         </div>
-
+<!-------------------------------------------->
         <div class="main-content">
-
+            <div class="main-title"></div>
+            <div class="card-deck">
+                <div class="card">
+                    <img class="card-img">
+                    <div class="card-text"></div>
+                </div>
+                <div class="card">
+                    <img class="card-img">
+                    <div class="card-text"></div>
+                </div>
+                <div class="card">
+                    <img class="card-img">
+                    <div class="card-text"></div>
+                </div>
+                <div class="card">
+                    <img class="card-img">
+                    <div class="card-text"></div>
+                </div>    
+            </div>
         </div>
-
+<!-------------------------------------------->
         <div class="testimonials">
+            <div class="quote">
 
+            </div>
+            <div class="author"></div>
         </div>
-
+<!-------------------------------------------->
         <div class="call-to-action">
-
+            <div class="action-box">
+                <div class="action-text">
+                    <div class="action-title"></div>
+                    <div class="action-description"></div>
+                </div>
+                <button class="action-button"></button>
+            </div>
         </div>
-
+<!-------------------------------------------->
         <div class="footer">
-            
+            <div class="footer-text"></div>
         </div>
     </body>
 </html>
