Change main-content class to main

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img class="greeter-img>">
         </div>
 <!-------------------------------------------->
-        <div class="main-content">
+        <div class="main">
             <div class="main-title"></div>
             <div class="card-deck">
                 <div class="card">
