Add remaining sub-divs for header and greeter

--- a/index.html
+++ b/index.html
@@ -5,20 +5,36 @@
         <meta charset="UTF-8">
         <title>ScourgedIn</title>
     </head>
-
+<!-------------------------------------------->
+<!-------------------------------------------->
     <body>
         <div class="header">
             <div class="header-right">
+                <img class="header-logo">
+                <div class="header-title">
 
+                </div>
             </div>
             <div class="header-left">
-
+                <ul>
+                    <li class="header-link">
+                        <a href=""></a>
+                    </li>
+                    <li class="header-link">
+                        <a href=""></a>
+                    </li>
+                    <li class="header-link">
+                        <a href=""></a>
+                    </li>
+                </ul>
             </div>
         </div>
 <!-------------------------------------------->
         <div class="greeter">
             <div class="greeter-card">
-
+                <div class="greeter-card-title"></div>
+                <div class="greeter-card-text"></div>
+                <button class="greeter-card-button"></button>
             </div>
             <img class="greeter-img>">
         </div>
