Add basic/placeholder text to applicable elements

--- a/index.html
+++ b/index.html
@@ -11,20 +11,18 @@
         <div class="header">
             <div class="header-right">
                 <img class="header-logo">
-                <div class="header-title">
-
-                </div>
+                <div class="header-title">ScourgedIn</div>
             </div>
             <div class="header-left">
                 <ul>
                     <li class="header-link">
-                        <a href=""></a>
+                        <a href="">Link One</a>
                     </li>
                     <li class="header-link">
-                        <a href=""></a>
+                        <a href="">Link Two</a>
                     </li>
                     <li class="header-link">
-                        <a href=""></a>
+                        <a href="">Link Three</a>
                     </li>
                 </ul>
             </div>
@@ -32,54 +30,56 @@
 <!-------------------------------------------->
         <div class="greeter">
             <div class="greeter-card">
-                <div class="greeter-card-title"></div>
-                <div class="greeter-card-text"></div>
-                <button class="greeter-card-button"></button>
+                <div class="greeter-card-title">Frostmourne hungers.</div>
+                <div class="greeter-card-text">Welcome to your professional undead army. Join colleagues, classmates, and friends on ScourgedIn.</div>
+                <button class="greeter-card-button">Sign Up</button>
             </div>
             <img class="greeter-img>">
         </div>
 <!-------------------------------------------->
         <div class="main">
-            <div class="main-title"></div>
+            <div class="main-title">Your will is not your own.</div>
             <div class="card-deck">
                 <div class="card">
                     <img class="card-img">
-                    <div class="card-text"></div>
+                    <div class="card-text">Search for new jobs and body-part requisitions.</div>
                 </div>
                 <div class="card">
                     <img class="card-img">
-                    <div class="card-text"></div>
+                    <div class="card-text">Find someone you know who has already been Scourged. </div>
                 </div>
                 <div class="card">
                     <img class="card-img">
-                    <div class="card-text"></div>
+                    <div class="card-text">Train a new abillity or talent.</div>
                 </div>
                 <div class="card">
                     <img class="card-img">
-                    <div class="card-text"></div>
+                    <div class="card-text">Chat with one of our Necromancers.</div>
                 </div>    
             </div>
         </div>
 <!-------------------------------------------->
         <div class="testimonials">
             <div class="quote">
-
+                "My son. The day you were born, the very forests of Lordaeron whispered the name... Arthas. My child. I watched with pride as you grew into
+                a weapon of righteousness. Remember, our line has always ruled with wisdom and strength, and I know you will show restraint when exercising
+                your great power. But the truest victory, my son, is stirring the hearts of your people."
             </div>
-            <div class="author"></div>
+            <div class="author">-Terenas Menethil II</div>
         </div>
 <!-------------------------------------------->
         <div class="call-to-action">
             <div class="action-box">
                 <div class="action-text">
-                    <div class="action-title"></div>
-                    <div class="action-description"></div>
+                    <div class="action-title">Do the blood of your people demand justice?</div>
+                    <div class="action-description">I will show you the justice of the grave, and the true meaning of fear.</div>
                 </div>
-                <button class="action-button"></button>
+                <button class="action-button">Sign Up</button>
             </div>
         </div>
 <!-------------------------------------------->
         <div class="footer">
-            <div class="footer-text"></div>
+            <div class="footer-text">Copyright &copy Zoval Labs 2022</div>
         </div>
     </body>
 </html>
