Add src to images on index.html

--- a/index.html
+++ b/index.html
@@ -33,26 +33,26 @@
                 <div class="greeter-card-text">Welcome to your professional undead army. Join colleagues, classmates, and friends on ScourgedIn.</div>
                 <button class="greeter-card-button">Sign Up</button>
             </div>
-            <img class="greeter-img>">
+            <img class="greeter-img>" src="./images/king.png">
         </div>
 <!-------------------------------------------->
         <div class="main">
             <div class="main-title">Your will is not your own.</div>
             <div class="card-deck">
                 <div class="card">
-                    <img class="card-img">
+                    <img class="card-img" src="./images/abom.png">
                     <div class="card-text">Search for new jobs and body-part requisitions.</div>
                 </div>
                 <div class="card">
-                    <img class="card-img">
+                    <img class="card-img" src="./images/orc.png">
                     <div class="card-text">Find someone you know who has already been Scourged. </div>
                 </div>
                 <div class="card">
-                    <img class="card-img">
+                    <img class="card-img" src="./images/redguy.png">
                     <div class="card-text">Train a new abillity or talent.</div>
                 </div>
                 <div class="card">
-                    <img class="card-img">
+                    <img class="card-img" src="./images/lich.png">
                     <div class="card-text">Chat with one of our Necromancers.</div>
                 </div>    
             </div>
