Change ScourgedIn to Scourged-In in title and header

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <head>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="./style.css">
-        <title>ScourgedIn</title>
+        <title>Scourged-In</title>
     </head>
 <!-------------------------------------------->
 <!-------------------------------------------->
     <body>
         <div class="header">
             <div class="header-left">
-                <div class="header-title">ScourgedIn</div>
+                <div class="header-title">Scourged-In</div>
             </div>
             <div class="header-right">
                 <ul>
