--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="greeter">
             <div class="greeter-card">
                 <div class="greeter-card-title">Frostmourne hungers.</div>
-                <div class="greeter-card-text">Welcome to your professional undead army. Join colleagues, classmates, and friends on ScourgedIn.</div>
+                <div class="greeter-card-text">Welcome to your professional undead army. Join colleagues, classmates, and friends on Scourged-In.</div>
                 <button class="greeter-card-button">Sign Up</button>
             </div>
             <img class="greeter-img>" src="./images/king.png">
