Change I to We in call-to-action

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="action-box">
                 <div class="action-text">
                     <div class="action-title">Do the blood of your people demand justice?</div>
-                    <div class="action-description">I will show you the justice of the grave, and the true meaning of fear.</div>
+                    <div class="action-description">We will show you the justice of the grave, and the true meaning of fear.</div>
                 </div>
                 <button class="action-button">Sign Up</button>
             </div>
