Add html div element quote-box

--- a/index.html
+++ b/index.html
@@ -60,18 +60,20 @@
         </div>
 <!-------------------------------------------->
         <div class="testimonials">
-            <div class="quote">
-                "My son. The day you were born, the very forests of Lordaeron whispered the name... Arthas. My child. I watched with pride as you grew into
-                a weapon of righteousness. Remember, our line has always ruled with wisdom and strength, and I know you will show restraint when exercising
-                your great power. But the truest victory, my son, is stirring the hearts of your people."
+            <div class="quote-box">
+                <div class="quote">
+                    "My son. The day you were born, the very forests of Lordaeron whispered the name... Arthas. My child. I watched with pride as you grew into
+                    a weapon of righteousness. Remember, our line has always ruled with wisdom and strength, and I know you will show restraint when exercising
+                    your great power. But the truest victory, my son, is stirring the hearts of your people."
+                </div>
+                <div class="author">-Terenas Menethil II</div>
             </div>
-            <div class="author">-Terenas Menethil II</div>
         </div>
 <!-------------------------------------------->
         <div class="call-to-action">
             <div class="action-box">
                 <div class="action-text">
-                    <div class="action-title">Do the blood of your people demand justice?</div>
+                    <div class="action-title">Does the blood of your people demand justice?</div>
                     <div class="action-description">We will show you the justice of the grave, and the true meaning of fear.</div>
                 </div>
                 <button class="action-button">Sign Up</button>
