Change links from generic to relevant names

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <div class="header-right">
                 <ul>
                     <li class="header-link">
-                        <a href="">Link One</a>
+                        <a href="">Forge of Souls</a>
                     </li>
                     <li class="header-link">
-                        <a href="">Link Two</a>
+                        <a href="">Pit of Saron</a>
                     </li>
                     <li class="header-link">
-                        <a href="">Link Three</a>
+                        <a href="">Halls of Reflection</a>
                     </li>
                 </ul>
             </div>
